Move content out of print-container and make sure new content does not make the page jump [touch: 880551674141771]

--- a/src/static/src/scss/pages/_reports-page.scss
+++ b/src/static/src/scss/pages/_reports-page.scss
@@ -163,6 +163,10 @@ $dmb-box-shadow: 0 2px 8px 0 rgba($dmb-color-grey-suva, .5);
 
   &__hero-company {
     display: block;
+
+    &:empty:before {
+      content: '\200b'; // unicode zero width space character
+    }
   }
 
   &__hero-date {
